@@ -1,0 +1,20 @@
+<html> 
+<head>
+
+<style>
+.editing { 
+    border: 1px solid red; 
+    padding: 12px; 
+    font-size: 24px; 
+}
+</style>
+
+<title>deleteToEndOfLine: test</title> 
+</head> 
+<body>
+<p>First add the following line to your ~/Library/KeyBindings/DefaultKeyBinding.dict then relaunch Safari: "^k" = "deleteToEndOfLine:";</p>
+<p>Place the cursor between the two 'o's in 'Foo' and hit ^k twice.  The first should result in 'Fo\nbar' and the second should result in 'Fobar'.</p>
+<div class="editing" contentEditable><div>Foo</div><div>bar</div></div>
+
+</body>
+</html>
